--- a/index.html
+++ b/index.html
@@ -1,7 +1,59 @@
-<!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<html>
+<head>
+</head>
+<body bgcolor="00AEAF">
+<div class='block'>
+    <p class='text'>
+        Так-так-так<br>
+        У кого-то сегодня День рождения?<br>
+        И он хочет свои подарки?<br>
+        Не так быстро!
+    </p>
+    <br>
+    <br>
+    <div class='cat'>
+        <img src="/assets/img/1434700070_833688507.jpg" alt="котя" height=50%/>
+    </div>
+
+</div>
+<br>
+<br>
+<a href="https://happybirthday.moy.su/index/first-stap/0-4">
+    <input class='button' type="button" value="Начать страдать">
+</a>
+
 </body>
+</html>
+<style> * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+}
+
+.text {
+    margin-top: 20%;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 58px;
+    color: #FFFFFF;
+}
+
+.button {
+    background: #FFFFFF;
+    border-radius: 6px;
+    width: 300px;
+    height: 100px;
+    font-size: 30px;
+    line-height: 58px;
+}
+
+
+
+.cat {
+} </style>
+<script></script>
 </html>
