--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
-
 <html>
 <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body bgcolor="00AEAF">
 <div class='block'>
@@ -14,47 +14,15 @@
     <br>
     <br>
     <div class='cat'>
-        <img src="/assets/img/1434700070_833688507.jpg" alt="котя" height=50%/>
+        <img src="./Pics/cat.jpg" alt="котя" height=50%/>
     </div>
 
 </div>
 <br>
 <br>
-<a href="https://happybirthday.moy.su/index/first-stap/0-4">
+<a href="./step1.html">
     <input class='button' type="button" value="Начать страдать">
 </a>
 
 </body>
-</html>
-<style> * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Lato', sans-serif;
-    text-align: center;
-}
-
-.text {
-    margin-top: 20%;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 48px;
-    line-height: 58px;
-    color: #FFFFFF;
-}
-
-.button {
-    background: #FFFFFF;
-    border-radius: 6px;
-    width: 300px;
-    height: 100px;
-    font-size: 30px;
-    line-height: 58px;
-}
-
-
-
-.cat {
-} </style>
-<script></script>
 </html>
