--- a/step1.html
+++ b/step1.html
@@ -12,6 +12,12 @@
     <source src="./Pics/Kasta.mp3">
     <p>Ваш браузер не поддерживает аудио</p>
 </audio>
+<br>
+<br>
+<form action="http://localhost:3000/" method="post">
+    <p><input name="login"></p>
+    <p><input type="submit"></p>
+</form>
 
 </body>
 </html>
