--- a/step1.html
+++ b/step1.html
@@ -14,9 +14,13 @@
 </audio>
 <br>
 <br>
-<form action="http://localhost:3000/" method="post">
-    <p><input name="login"></p>
-    <p><input type="submit"></p>
+<!--<form action="http://localhost:3000/" method="post">-->
+<!--    <p><input name="login"></p>-->
+<!--    <p><input type="submit"></p>-->
+<!--</form>-->
+<form action="http://localhost:3000" method="post" id="myform">
+    <input type="password"  value="" id="login-pass" name="password">
+    <button type="submit" class="btn btn-default">ВХОД</button>
 </form>
 
 </body>
