--- a/step1.html
+++ b/step1.html
@@ -13,13 +13,10 @@
     <p>Ваш браузер не поддерживает аудио</p>
 </audio>
 <br>
-<br>
-<!--<form action="http://localhost:3000/" method="post">-->
-<!--    <p><input name="login"></p>-->
-<!--    <p><input type="submit"></p>-->
-<!--</form>-->
+
+<p class="text1">Введите пароль (только давай без этих тестировщиковских штук, мне было лень писать проверки)</p>
 <form action="http://localhost:3000" method="post" id="myform">
-    <input type="password"  value="" id="login-pass" name="password">
+    <input type="password" id="login-pass" name="password">
     <button type="submit" class="btn btn-default">ВХОД</button>
 </form>
 
