--- a/goodboy.html
+++ b/goodboy.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-$END$
+<body bgcolor="00AEAF">
+<div class='block'>
+    <p class='text'>
+    Что ж, неплохо, но ты же не думал, что на этом всё закончится?
+    </p>
+    <br>
+
+</div>
+<br>
+<br>
+<a href="./step1.html">
+    <input class='button' type="button" value="Начать страдать">
+</a>
+
 </body>
 </html>
