--- a/step1.html
+++ b/step1.html
@@ -13,11 +13,12 @@
     <p>Ваш браузер не поддерживает аудио</p>
 </audio>
 <br>
-
-<p class="text1">Введите пароль (только давай без этих тестировщиковских штук, мне было лень писать проверки)</p>
-<form action="http://localhost:3000" method="post" id="myform">
+<br>
+<p class="text1">Введите пароль <br>
+    (только давай без этих тестировщиковских штук, мне было лень писать проверки)</p>
+<form action="http://192.168.43.7:3000" method="post" id="myform">
     <input type="password" id="login-pass" name="password">
-    <button type="submit" class="btn btn-default">ВХОД</button>
+    <button type="submit" class="btn btn-default">Я угадал?</button>
 </form>
 
 </body>
