--- a/step1.html
+++ b/step1.html
@@ -14,12 +14,17 @@
 </audio>
 <br>
 <br>
-<p class="text1">Введите пароль <br>
-    (только давай без этих тестировщиковских штук, мне было лень писать проверки)</p>
-<form action="http://192.168.43.7:3000" method="post" id="myform">
-    <input type="password" id="login-pass" name="password">
-    <button type="submit" class="btn btn-default">Я угадал?</button>
-</form>
+
+<a href="./goodboy.html">
+    <input class='button1' type="button" value="Начать страдать">
+</a>
+
+<!--<p class="text1">Введите пароль <br>-->
+<!--    (только давай без этих тестировщиковских штук, мне было лень писать проверки)</p>-->
+<!--<form action="http://localhost:3000" method="post" id="myform">-->
+<!--    <input type="password" id="login-pass" name="password">-->
+<!--    <button type="submit" class="btn btn-default">Я угадал?</button>-->
+<!--</form>-->
 
 </body>
 </html>
