--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
     </p>
     <br>
     <br>
-    <div class='cat'>
-        <img src="./Pics/cat.jpg" alt="котя" height=50%/>
-    </div>
+    <a href="./noway.html">
+        <div class='cat'>
+            <img src="./Pics/cat.jpg" alt="котя" height=50%/>
+        </div>
+
+    </a>
 
 </div>
 <br>
