--- a/step1.html
+++ b/step1.html
@@ -16,7 +16,7 @@
 <br>
 
 <a href="./goodboy.html">
-    <input class='button1' type="button" value="Начать страдать">
+    <input class='button1' type="button">
 </a>
 
 <!--<p class="text1">Введите пароль <br>-->
