--- a/noway.html
+++ b/noway.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-$END$
+<p class='text'>
+Котик не при чём!
+</p>
+
 </body>
 </html>
