--- a/noway.html
+++ b/noway.html
@@ -1,12 +1,15 @@
 <html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body bgcolor="00AEAF">
 <p class='text'>
 Котик не при чём!
 </p>
+<a href="./index.html">
+    <input class='button' type="button" value="Вернуться">
+</a>
 
 </body>
 </html>
