--- a/goodboy.html
+++ b/goodboy.html
@@ -1,48 +1,24 @@
 <html>
 <head>
-    <style>
-        * {
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-            font-family: 'Lato', sans-serif;
-            text-align: center;
-        }
 
-        .text {
-            margin-top: 20%;
-            font-style: normal;
-            font-weight: normal;
-            font-size: 48px;
-            line-height: 58px;
-            color: #FFFFFF;
-        }
-
-        .button {
-            background: #FFFFFF;
-            border-radius: 6px;
-            width: 300px;
-            height: 100px;
-            font-size: 30px;
-            line-height: 58px;
-        }
-
-    </style>
     <meta charset="utf-8">
-
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body bgcolor="00AEAF">
 <div class='block'>
     <p class='text'>
     Что ж, неплохо, но ты же не думал, что на этом всё закончится?
+        <br>
+        <br>
+        8-7-13-20-29-11 5-10-3-1-15
     </p>
     <br>
 
 </div>
-<br>
-<br>
-<a href="./step1.html">
-    <input class='button' type="button" value="Начать страдать">
+
+
+<a href="./noway2.html">
+    <input class='button1' type="button">
 </a>
 
 </body>
