--- a/sofa.html
+++ b/sofa.html
@@ -9,7 +9,7 @@
     Теперь тебе есть, что выпить и куда это налить, что тебе ещё нужно?
     <br>
     <br>
-    <audio controls class="audio">
+    <audio controls>
         <source src="./Pics/marsh.mp3">
 </audio>
 </p>
