--- a/step1.html
+++ b/step1.html
@@ -19,12 +19,12 @@
     <input class='button1' type="button">
 </a>
 
-<!--<p class="text1">Введите пароль <br>-->
-<!--    (только давай без этих тестировщиковских штук, мне было лень писать проверки)</p>-->
-<!--<form action="http://localhost:3000" method="post" id="myform">-->
-<!--    <input type="password" id="login-pass" name="password">-->
-<!--    <button type="submit" class="btn btn-default">Я угадал?</button>-->
-<!--</form>-->
+<p class="text1">Введите пароль <br>
+    (только давай без этих тестировщиковских штук, мне было лень писать проверки)</p>
+<form action="http://167.172.99.77:3000" method="post" id="myform">
+    <input type="password" id="login-pass" name="password">
+    <button type="submit" class="btn btn-default">Я угадал?</button>
+</form>
 
 </body>
 </html>
