--- a/sofa.html
+++ b/sofa.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body bgcolor="00AEAF">
 <p class='text'>
     Теперь тебе есть, что выпить и куда это налить, что тебе ещё нужно?
+</p>
     <br>
     <br>
     <audio controls>
         <source src="./Pics/marsh.mp3">
 </audio>
-</p>
+
+
+<a href="./end.html">
+    <input class='button1' type="button">
+</a>
 </body>
 </html>
