--- a/end.html
+++ b/end.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="styles.css">
 
 </head>
-<body>
+<body bgcolor="00AEAF">
 <p class='text'>
     Ураа! С Днём рождения!
 </p>
