--- a/index.html
+++ b/index.html
@@ -7,24 +7,21 @@
 <div class='block'>
     <p class='text'>
         Так-так-так<br>
-        У кого-то сегодня День рождения?<br>
+        У кого-то сегодня <br>
+        День рождения?<br>
         И он хочет свои подарки?<br>
         Не так быстро!
     </p>
-    <br>
-    <br>
-    <a href="./noway.html">
-        <div class='cat'>
-            <img src="./Pics/cat.jpg" alt="котя" height=50%/>
-        </div>
-
-    </a>
-
 </div>
+    <br>
+    <br>
+
+
+
 <br>
 <br>
 <a href="./step1.html">
-    <input class='button' type="button" value="Начать страдать">
+    <input class='button' type="button" value="НАЧАТЬ СТРАДАТЬ">
 </a>
 
 </body>
