--- a/sofa.html
+++ b/sofa.html
@@ -6,7 +6,9 @@
 </head>
 <body bgcolor="00AEAF">
 <p class='text'>
-    Теперь тебе есть, что выпить и куда это налить, что тебе ещё нужно?
+    Теперь тебе есть, что выпить <br>
+    и куда это налить. <br>
+    Что тебе ещё нужно?
 </p>
     <br>
     <br>
