--- a/step1.html
+++ b/step1.html
@@ -17,10 +17,11 @@
 
 
 <p class="text1">Введите пароль <br>
-    (только давай без этих тестировщиковских штук, мне было лень писать проверки)</p>
+    (только давай без этих тестировщиковских штук,<br>
+    мне было лень писать проверки)</p>
 <form action="http://167.172.99.77:3000" method="post" id="myform">
-    <input type="password" id="login-pass" name="password">
-    <button type="submit" class="btn btn-default">Я угадал?</button>
+    <input class="input" type="password" id="login-pass" name="password">
+    <button class = 'button2' type="submit" class="btn btn-default">Я угадал?</button>
 </form>
 
 </body>
